--- a/style.css
+++ b/style.css
@@ -5,17 +5,26 @@
     display: none;
 }
 .calculator{
-    margin: 1% auto 0 auto;
-    max-width: 340px;
-    height: 100vh;
-    padding: 20px;
 
+    margin-top: 60px;
+    width: 515px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+/* .moneyForm{
+    width: 533px;
+} */
+.row{
+    width: 533px;
 }
 .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 label{
     display: block;
@@ -59,15 +68,16 @@ label{
     margin-left: -110px;
 }
 input{
-    
-    border-top-width: 2px !important;
-    border-bottom-width: 2px !important;
-    border-left-width: 2px !important;
+    /* width: 413px !important;
+    height: 68px !important; */
+    border-top-width: 1px !important;
+    border-bottom-width: 1px !important;
+    border-left-width: 1px !important;
     border-radius: 11px !important;
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
     z-index: 0 !important;
-    border-color: #4263EB !important;
+    border-color: #A2A0A8 !important;
 }
 input:focus, input:active{
     outline: none !important;
@@ -107,6 +117,7 @@ input:focus, input:active{
 }
 .input-group{
     position: relative;
+
 }
 .btn-outline-secondary.dropdown-toggle:focus{
     box-shadow: none !important;
@@ -134,12 +145,12 @@ input:focus, input:active{
     width: 120px !important;
     height: 50px;
     border: none;
-    border-top: 2px solid ;
-    border-right: 2px solid ;
-    border-bottom: 2px solid ;
+    border-top: 1px solid ;
+    border-right: 1px solid ;
+    border-bottom: 1px solid ;
     border-top-right-radius: 11px !important;
     border-bottom-right-radius: 11px !important;
-    border-color: #4263EB !important;
+    border-color: #A2A0A8 !important;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -204,9 +215,8 @@ input:focus, input:active{
     border-color: #4263EB;
 }
 .button__link{
-    width: 310px !important;
-    height: 50px;
-    margin: 0 auto;
+    display: block;
+    width: 200px;
     margin-top: 20px;
 }
 .form__footer a{
@@ -228,10 +238,26 @@ input:focus, input:active{
 .logo{
     display: none;
 }
+@media (max-width: 670px) {
+    .row{
+        width: 320px;
+    }
+
+    .calculator{
+
+        margin-top: 60px;
+        width: 320px;
+        height: 100vh;
+    }
+    .button__link{
+        width: 100px;
+    }
+}
 @media (max-width: 420px) {
     body{
         position: relative;
     }
+    
     .logo{
         position: absolute;
         left: 20px;
@@ -266,6 +292,7 @@ input:focus, input:active{
 }
 
 .footer__wrapper{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
